# infer-ml

./: README.md  dune-project  infer.opam
lib/: dune  infer.ml  syntax.ml  types.ml
test/: dune
